# tgcalls

./: .gitignore  CMakeLists.txt  docker-compose.yaml
pytgcalls/: helpers.py  stream.py  test2.py  test3.py  test4.py
tgcalls/: CMakeLists.txt
tgcalls/cmake/: lib_tgcalls.cmake
tgcalls/src/: NativeInstance.cpp  NativeInstance.h  P2PFileAudioDevice.cpp  P2PFileAudioDevice.h  P2PFileAudioDeviceDescriptor.h  P2PRawAudioDevice.cpp  P2PRawAudioDevice.h  P2PRawAudioDeviceDescriptor.cpp  P2PRawAudioDeviceDescriptor.h  WrappedAudioDeviceModuleImpl.cpp  WrappedAudioDeviceModuleImpl.h  tgcalls.cpp
tgcalls/src/video/: PythonPureSource.cpp  PythonPureSource.h  PythonRecord.cpp  PythonRecord.h  PythonSource.cpp  PythonSource.h  PythonSourceYUV.cpp  PythonSourceYUV.h  PythonVideoTrackSource.cpp  PythonVideoTrackSource.h
